@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2013-06-20 14:08
+// This file was generated on 2013-06-21 11:20
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = $extensionPath . 'Classes/';
@@ -39,6 +39,7 @@ return array(
 	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
 	'tx_icslibnavitia_route' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Route.php',
 	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
+	'tx_icslibnavitia_scheduler_cachetask' => $extensionPath . 'scheduler/class.tx_icslibnavitia_scheduler_cachetask.php',
 	'tx_icslibnavitia_section' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Section.php',
 	'tx_icslibnavitia_segment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Segment.php',
 	'tx_icslibnavitia_site' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Site.php',
